# ai-support-openenv

./: .dockerignore  .gitignore  Dockerfile  PHASE2_FIXES.md  README.md  VALIDATION_GUIDE.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_phase2_validation.py  test_run.py  test_score_behavior.py  validate.py
env/: environment.py  grader.py  models.py  tasks.py
scripts/: baseline.py  server.py
server/: app.py
