[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support-agent"
version = "1.0.0"
description = "OpenEnv-based AI environment for customer support triage and escalation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ahmed Faraaz" }
]
dependencies = [
  "flask",
  "fastapi",
  "gunicorn",
  "openenv-core>=0.2.0",
  "openai",
  "pydantic",
  "python-dotenv",
  "pyyaml",
  "uvicorn",
]

[project.scripts]
server = "scripts.server:main"

[tool.setuptools]
packages = ["env", "scripts"]
